--- a/Views/Root/Index.cshtml
+++ b/Views/Root/Index.cshtml
@@ -28,7 +28,7 @@
     </div> 
 
     <div class="container">    
-        <form class="col-5" action="" method="get">
+        <form class="col-5" action="" method="post">
             <div class="form-group row">
             <label for="house-area" class="col-2 col-form-label">House area</label>
             <div class="col-2">
