--- a/Views/Root/Index.cshtml
+++ b/Views/Root/Index.cshtml
@@ -28,17 +28,17 @@
     </div> 
 
     <div class="container">    
-        <form class="col-5" action="" method="post">
+        <form class="col-5" action="" method="POST">
             <div class="form-group row">
             <label for="house-area" class="col-2 col-form-label">House area</label>
             <div class="col-2">
-                <input class="form-control" value="1000" id="house-area">
+                <input class="form-control" type="text" value="1000" id="houseArea" name="houseArea">
             </div>
             </div>
             <div class="form-group row">
                 <label for="build-year" class="col-2 col-form-label">Build year</label>
                 <div class="col-2">
-                    <input class="form-control" value="1989" id="build-year">
+                    <input class="form-control" type="text" value="1989" id="buildYear" name="buildYear">
                 </div>
             </div>
             <button formaction="Submit" type="submit" class="btn btn-primary">Submit</button>
